# vmpro-minitracker

./: Dockerfile  README.md  README_v3.md  crypto_cache.sqlite  currency_cache.sqlite  dashboard.py  dashboard_new.py  docker-compose.yml  fixed_fastapi_app.py  main.py  modern_fastapi_app.py  modern_fastapi_app_old.py  pyproject.toml  run_modern.sh
controllers/: modern_controllers.py
interfaces/: data_provider.py  service_interfaces.py
models/: api_models.py  stock.py
services/: __init__.py  async_data_providers.py  cache_manager.py  crypto_data_service.py  data_aggregator.py  fallback_data_service.py  integrated_data_service.py  localization_service.py  optimized_crypto_service.py  optimized_stock_service.py  real_time_service.py  service_manager.py  service_orchestrator.py  stock_data_service.py  tracker_service.py
templates/: dashboard.html  dashboard_htmx.html  dashboard_modern.html
templates/partials/: crypto_table.html  cryptos_table.html  error.html  market_overview.html  new_stocks_table.html  search_empty.html  search_results.html  stocks_table.html
utils/: config.py  performance.py
