[tool.poetry]
name = "vmpro-minitracker"
version = "0.1.0"
description = ""
authors = ["venysssssssssss <viniciussport2004@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
uvicorn = {extras = ["standard"], version = "0.32.1"}
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
python-dotenv = "1.0.0"
yfinance = "0.2.18"
pycoingecko = "3.1.0"
requests = "2.31.0"
requests-cache = "1.1.1"
aiohttp = "3.11.10"
aiofiles = "24.1.0"
jinja2 = "3.1.4"
python-multipart = "0.0.17"
pandas = "^2.3.1"
numpy = "^2.3.1"
ujson = "5.8.0"
asyncio = "3.4.3"
httpx = "0.28.1"
blue = "^0.9.1"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-flask = "1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
